[package]
name = "libpgquery-sys"
version = "0.1.0"
edition = "2018"
description = "Rust bindings to libpgquery"
license = "MIT"
readme = "README.md"
keywords = ["postgres", "sql", "pg_query"]

[build-dependencies]
bindgen = "0.59.1"
prost-build = "0.9.0"

[dependencies]
prost = "0.9.0"
thiserror = "1.0.30"

[dev-dependencies]
serde_json = "1.0.68"
